--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,51 @@
-<p>home works!</p>
+<section class="page-container">
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+  <p>home works!</p>
+</section>
