add about us homepage section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,51 +1,3 @@
-<section class="page-container">
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-  <p>home works!</p>
-</section>
+<section class="hero-section"></section>
+
+<app-about-us></app-about-us>
