add basic footer section, our story and volunteer pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,13 @@
     >
     <a
       mat-button
+      routerLink="/our-story"
+      routerLinkActive="active-link"
+      (click)="drawer.close()"
+      >Our Story</a
+    >
+    <a
+      mat-button
       routerLink="/animals"
       routerLinkActive="active-link"
       (click)="drawer.close()"
@@ -39,6 +46,13 @@
       routerLinkActive="active-link"
       (click)="drawer.close()"
       >Donate</a
+    >
+    <a
+      mat-button
+      routerLink="/volunteer"
+      routerLinkActive="active-link"
+      (click)="drawer.close()"
+      >Volunteer</a
     >
     <a
       mat-button
