--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,113 @@
-<mat-toolbar color="accent" class="footer-toolbar">
-  <span>&copy; 2025 Spirit Animals Sanctuary</span>
+<mat-toolbar class="footer-toolbar">
+  <div class="footer-container">
+    <div class="footer-content">
+      <div class="logo-and-socials">
+        <div class="logo-container">
+          <a routerLink="/">
+            <img
+              ngSrc="https://spiritanimals.ro/wp-content/uploads/2023/08/Asset-2Mod2.png"
+              alt="logo"
+              width="200"
+              height="200"
+              priority="true"
+              class="logo-image-footer"
+            />
+          </a>
+        </div>
+        <div class="socials-container">
+          <a
+            href="https://www.patreon.com/SpiritAnimalsSanctuary"
+            class="social-media-link"
+            ><img
+              ngSrc="https://www.iconpacks.net/icons/free-icons-6/free-patreon-red-rounded-square-logo-icon-19523-thumb.png"
+              alt="social media link patreon"
+              width="20"
+              height="20"
+          /></a>
+          <a
+            href="https://www.facebook.com/SpiritAnimalsSanctuary"
+            class="social-media-link"
+            ><img
+              ngSrc="https://static.vecteezy.com/system/resources/previews/018/930/698/non_2x/facebook-logo-facebook-icon-transparent-free-png.png"
+              alt="social media link facebook"
+              width="20"
+              height="20"
+          /></a>
+          <a
+            href="https://www.instagram.com/spirit_animals_sanctuary"
+            class="social-media-link"
+            ><img
+              ngSrc="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
+              alt="social media link instagram"
+              width="20"
+              height="20"
+          /></a>
+          <a
+            href="https://www.youtube.com/@SpiritAnimalsSanctuary"
+            class="social-media-link"
+            ><img
+              ngSrc="https://pngdownload.io/wp-content/uploads/2023/12/YouTube-Logo-PNG-Symbol-for-Video-Platform-Transparent-jpg.webp"
+              alt="social media link youtube"
+              width="20"
+              height="20"
+          /></a>
+          <a
+            href="https://www.tiktok.com/@spiritanimalssanctuary"
+            class="social-media-link"
+            ><img
+              ngSrc="https://cdn.pixabay.com/photo/2021/06/15/12/28/tiktok-6338432_1280.png"
+              alt="social media link tiktok"
+              width="20"
+              height="20"
+          /></a>
+        </div>
+      </div>
+      <div class="links-container">
+        <div class="links-column social-media">
+          <h3>SOCIAL MEDIA</h3>
+          <ul>
+            <li>
+              <a href="https://www.facebook.com/SpiritAnimalsSanctuary"
+                >Facebook</a
+              >
+            </li>
+            <li>
+              <a href="https://www.instagram.com/spirit_animals_sanctuary"
+                >Instagram</a
+              >
+            </li>
+            <li>
+              <a href="mailto:hello@spiritanimals.ro">Email</a>
+            </li>
+            <li>
+              <a href="https://www.patreon.com/SpiritAnimalsSanctuary"
+                >Patreon</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="links-column menu">
+          <h3>MENU</h3>
+          <ul>
+            <li><a routerLink="/">Home</a></li>
+            <li><a routerLink="/our-story">Our Story</a></li>
+            <li><a routerLink="/animals">Animals</a></li>
+            <li><a routerLink="/adopt">Adopt</a></li>
+            <li><a routerLink="/donate">Donate</a></li>
+            <li><a routerLink="/volunteer">Volunteer</a></li>
+            <li><a routerLink="/contact">Contact</a></li>
+          </ul>
+        </div>
+        <div class="links-column how-to-find-us">
+          <h3>HOW TO FIND US</h3>
+          <p>
+            Fundu Moldovei, Suceva, <br />
+            Romania
+          </p>
+          <a href="mailto:hello@spiritanimals.ro">hello&#64;spiritanimals.ro</a>
+        </div>
+      </div>
+    </div>
+    <div class="copyright-container">&copy; 2025 Spirit Animals Sanctuary</div>
+  </div>
 </mat-toolbar>
