--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,12 +12,18 @@
         [routerLinkActiveOptions]="{ exact: true }"
         >Home</a
       >
+      <a mat-button routerLink="/our-story" routerLinkActive="active-link"
+        >Our Story</a
+      >
       <a mat-button routerLink="/animals" routerLinkActive="active-link"
         >Animals</a
       >
       <a mat-button routerLink="/adopt" routerLinkActive="active-link">Adopt</a>
       <a mat-button routerLink="/donate" routerLinkActive="active-link"
         >Donate</a
+      >
+      <a mat-button routerLink="/volunteer" routerLinkActive="active-link"
+        >Volunteer</a
       >
       <a mat-button routerLink="/contact" routerLinkActive="active-link"
         >Contact</a
