--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -52,7 +52,6 @@
   width: 100%;
 }
 
-
 li {
   list-style: none;
 }
@@ -61,4 +60,17 @@ a {
   color: white;
   text-decoration: none;
   font-size: 0.9rem;
+}
+
+@media (max-width: 600px) {
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 400px) {
+  .links-container {
+    flex-direction: column;
+    align-items: center;
+  }
 }
