--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -44,7 +44,7 @@ input[type="password"]:focus {
   box-shadow: 0 0 6px rgba(0, 123, 255, 0.4);
 }
 
-button[type="submit"] {
+button[type="submit"], button {
   width: 100%;
   padding: 14px 0;
   background-color: #007bff;
@@ -55,6 +55,10 @@ button[type="submit"] {
   border-radius: 6px;
   cursor: pointer;
   transition: background-color 0.25s ease;
+}
+
+button[type="button"] {
+  margin-top: 20px;
 }
 
 button[type="submit"]:hover:not(:disabled) {
