--- a/src/app/pages/volunteer/volunteer.component.html
+++ b/src/app/pages/volunteer/volunteer.component.html
@@ -21,7 +21,7 @@
         <li>Assist with feeding, cleaning, and enrichment</li>
         <li>Contribute to special projects and events</li>
       </ul>
-      <a class="cta-button" href="/contact">Join Us Now</a>
+      <a class="cta-button" routerLink="/contact">Join Us Now</a>
     </div>
 
     <div class="volunteer-gallery">
