--- a/src/app/pages/donate/donate.component.html
+++ b/src/app/pages/donate/donate.component.html
@@ -8,14 +8,22 @@
     <div class="donate-box">
       <h2>Donate Monthly</h2>
       <p>Become a guardian angel by giving regularly.</p>
-      <a *ngIf="!isLoggedIn()" routerLink="/login" class="donate-button">Monthly Donation</a>
-      <a *ngIf="isLoggedIn()" routerLink="/dashboard" class="donate-button">Monthly Donation</a>
+      <a *ngIf="!isLoggedIn()" routerLink="/login" class="donate-button"
+        >Monthly Donation</a
+      >
+      <a *ngIf="isLoggedIn()" routerLink="/dashboard" class="donate-button"
+        >Monthly Donation</a
+      >
     </div>
     <div class="donate-box">
       <h2>One-Time Donation</h2>
       <p>Every contribution makes a difference.</p>
-      <a *ngIf="!isLoggedIn()" routerLink="/donate/once" class="donate-button">Donate Now</a>
-      <a *ngIf="isLoggedIn()" routerLink="/dashboard" class="donate-button">Donate Now</a>
+      <a *ngIf="!isLoggedIn()" routerLink="/donate/once" class="donate-button"
+        >Donate Now</a
+      >
+      <a *ngIf="isLoggedIn()" routerLink="/dashboard" class="donate-button"
+        >Donate Now</a
+      >
     </div>
   </section>
 
@@ -28,19 +36,4 @@
       <li><a routerLink="/adopt">Sponsor an Animal</a></li>
     </ul>
   </section>
-
-  <section class="donation-ranking">
-  <h2>Top Donors 💖</h2>
-  <ul *ngIf="ranking.length > 0; else noRanking">
-    <li *ngFor="let donor of ranking; let i = index">
-      <span class="rank">#{{ i + 1 }}</span>
-      <span class="name">{{ donor.name }}</span>
-      <span class="amount">{{ donor.total | currency }}</span>
-    </li>
-  </ul>
-  <ng-template #noRanking>
-    <p>No donations yet. Be the first to support!</p>
-  </ng-template>
-</section>
-
 </section>
