--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,4 +11,7 @@
     <button type="submit" [disabled]="!loginForm.valid">Login</button>
     <button type="button" routerLink="/register">Register</button>
   </form>
+  <div class="form-footer">
+    <a routerLink="/forgot-password">Forgot your password?</a>
+  </div>
 </section>
